modified archive contact

--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Daniel: @daniel</p>
+    <p>Daniel: @daiel3858</p>
     <p>Douglas: @douglas</p>
     <p>José: @jose</p>
 </body>
