Archive contact corrigido pae :grin:

--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,6 @@
     <h1>Contato</h1>
     <p>Daniel: @Daniel3858</p>
     <p>Douglas: @douglas</p>
-    <p>José: @jose</p>
+    <p>José: @josezin123</p>
 </body>
 </html>
